# resistencias

./: .anjuta_sym_db.db  Makefile  Makefile.in  config.h  config.status  configure  configure.ac
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
.ropeproject/: objectdb
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  resistencias.py  resistencias.py~  resistencias.ui
